--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "json-server": "json-server --watch db.json --port 3100"
   },
   "dependencies": {
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "react": "19.1.0",
