--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "json-server": "json-server --watch db.json --port 3100"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "^0.17.4",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "react": "19.1.0",
