--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-cookie": "^8.0.1",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
