--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "json-server": "json-server --watch db.json --port 3100"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "json-server": "^0.17.4",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-cookie": "^8.0.1",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0"
+    "react-hook-form": "^7.62.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
