--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint",
-    "json-server": "json-server --watch db.json --port 3100"
+    "json-server": "json-server --watch db.json --port 3100",
+    "add-random": "node seed.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
